--- a/index.html
+++ b/index.html
@@ -222,28 +222,20 @@
 
         const posts = [
             {
-                title: "👋 你好，这是我的第一篇 Markdown 博客",
-                desc: "测试一下暗黑模式和图片显示效果，这篇文章将展示 Markdown 的渲染能力。",
-                file: "hello.md", 
-                date: "2025-12-14",
-                tags: ["置顶", "测试"],
-                cover: "https://images.unsplash.com/photo-1528164344705-47542687000d?auto=format&fit=crop&w=800&q=80"
+                title: "资源查找与管理方法",
+                desc: "今天是0721日，距离上篇文章已经4个月了，终于赶在这个特殊的日子把这篇文章写出来，上一篇主要聊GALGAME，提到了一些资源方面的问题，在GAL圈资源的查找还是非常重要的，这一篇将对这一方面进行更加深入的讲解。",
+                file: "2024-07-21-资源查找与管理方法.md", 
+                date: "2024-07-21",
+                tags: ["资源", "网盘", "磁链", "种子", "GALGAME"],
+                cover: "https://p.inari.site/guest/25-12/15/693eeff15bbef.png"
             },
             {
-                title: "🎨 寻找二次元的配色灵感",
+                title: "献给GAL新手的一封情书",
                 desc: "如何搭配出既可爱又不刺眼的网站配色？分享一些我的心得。",
-                file: "color-guide.md",
-                date: "2025-12-10",
-                tags: ["设计", "教程"],
-                cover: "https://images.unsplash.com/photo-1550684848-fac1c5b4e853?auto=format&fit=crop&w=800&q=80"
-            },
-            {
-                title: "🚀 GitHub Pages 部署教程",
-                desc: "不需要复杂的命令行，仅仅需要拖拽文件即可更新博客。",
-                file: "deploy.md",
-                date: "2025-12-08",
-                tags: ["技术"],
-                cover: "https://images.unsplash.com/photo-1461749280684-dccba630e2f6?auto=format&fit=crop&w=800&q=80"
+                file: "2024-04-20-GALGAME新手入门指南.md",
+                date: "2024-04-20",
+                tags: ["GALGAME", "教程", "资源", "翻译器", "手机版"],
+                cover: "https://p.inari.site/guest/25-12/15/693ef0ba61cc0.jpg"
             }
         ];
 
