--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sakura Blog | 记录美好</title>
+    <title>Xsunake's Blog</title>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700;800&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/styles/atom-one-dark.min.css">
@@ -111,14 +111,14 @@
 <body>
 
     <nav>
-        <a href="#" class="logo">✨ KIRAKIRA</a>
+        <a href="#" class="logo">✨ Xsunake's Blog</a>
         <button class="theme-toggle" onclick="toggleTheme()" id="themeBtn">🌙</button>
     </nav>
 
     <div id="home-view">
         <header class="hero">
-            <h1>My Creative World</h1>
-            <p>这里有代码、生活和猫咪 🐱</p>
+            <h1>Xsunake's Blog</h1>
+            <p>今天开始自律</p>
         </header>
 
         <div class="tags" id="tagFilters">
@@ -140,15 +140,14 @@
             <div class="footer-section">
                 <h3>🌟 关于博主</h3>
                 <div class="footer-links">
-                    <a href="https://github.com/yourname" target="_blank">🐱 GitHub @YourName</a>
-                    <a href="mailto:you@example.com">📧 发送邮件给我</a>
+                    <a href="https://github.com/Xsunake" target="_blank">🐱 GitHub @Xsunake</a>
+                    <a href="mailto:xsunake@outlook.com">📧 发送邮件给我</a>
                 </div>
             </div>
             <div class="footer-section">
                 <h3>🤝 友情链接</h3>
                 <div class="footer-links">
-                    <a href="https://google.com" target="_blank">🌈 Google</a>
-                    <a href="#" target="_blank">🦄 朋友的小站</a>
+                    <a href="#" target="_blank">🦄 暂无……</a>
                 </div>
             </div>
             <div class="footer-section">
@@ -160,7 +159,7 @@
             </div>
         </div>
         <div class="copyright">
-            © 2025 Sakura Blog. Powered by Simple HTML & Markdown.
+            © 2025 Xsunake's Blog.
             <br>
             <a href="https://icp.gov.moe/?keyword=20248024" target="_blank">萌ICP备20248024号</a>
         </div>
